# blog

./: Cargo.toml  README.md  build.rs  index.html
.github/workflows/: ci.yml  deploy.yml
posts/: building-tiny-retro-pc.md  getting-started-with-leptos.md  rust-web-development-2024.md  understanding-webassembly.md
projects/: blackjack.md  github-stats-rs.md  rust-blog.md
public/: robots.txt  sitemap.xml
src/: app.rs  main.rs  styles.css
src/components/: about.rs  contacts.rs  home.rs  mod.rs  nav.rs  post_list.rs  post_view.rs  programmer.rs  project_view.rs  projects.rs  xmas_tree.rs
src/models/: Untitled  mod.rs  post.rs  project.rs
