[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "Element", "DomTokenList"] }
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
